--- a/templates/form.html
+++ b/templates/form.html
@@ -5,7 +5,12 @@
       Registration Form
     </title>
     <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700' rel='stylesheet'>
-    <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.4.1/css/all.css' integrity='sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz' crossorigin='anonymous'>
+    <link
+      crossorigin='anonymous'
+      href='https://use.fontawesome.com/releases/v5.4.1/css/all.css'
+      integrity='sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz'
+      rel='stylesheet'
+      >
     <style>
       html,
       body {
@@ -50,7 +55,7 @@
       <h1>
         Registration
       </h1>
-      <form action='/'>
+      <form action='/login' method='post'>
         <hr>
         <label id='icon' for='name'>
           <i class='fas fa-envelope'></i>
@@ -67,6 +72,7 @@
         </label>
         <input type='password' name='name' id='name' placeholder='Password' required/>
         <hr>
+        <input type='submit' value='Submit'/>
       </form>
     </div>
   </body>
