--- a/templates/form.html
+++ b/templates/form.html
@@ -1,30 +1,28 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>
-      Registration Form
-    </title>
-    <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700' rel='stylesheet'>
+    <link
+      href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700'
+      rel='stylesheet'
+      >
     <link
       crossorigin='anonymous'
       href='https://use.fontawesome.com/releases/v5.4.1/css/all.css'
       integrity='sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz'
       rel='stylesheet'
       >
+     <link
+       href='data:image/png;base64,iVBORw0KGgo='
+       rel='icon'
+       >
     <style>
-      html,
-      body {
+      body, html {
         display: flex;
         justify-content: center;
         height: 100%;
       }
 
-      body,
-      div,
-      h1,
-      form,
-      input,
-      p {
+      body, div, form, input, p {
         padding: 0;
         margin: 0;
         outline: none;
@@ -40,15 +38,18 @@
         text-align: center;
       }
 
-      p {
-        font-size: 12px;
-      }
-
       hr {
         color: #a9a9a9;
         opacity: 0.3;
       }
+
+      p {
+        font-size: 12px;
+      }
     </style>
+    <title>
+      Registration Form
+    </title>
   </head>
   <body>
     <div class='main-block'>
@@ -73,7 +74,7 @@
         <input type='password' name='password' id='password' placeholder='Password' required/>
         <hr>
         <input type='submit' value='Submit'/>
-        <input type='hidden' name='csrf-token' value="{{ csrf_token }}"/>
+        <input type='hidden' name='csrf-token' value='{{ csrf_token }}'/>
       </form>
     </div>
   </body>
